About section alignment fix for ipad resolution

--- a/source/stylesheets/_pages.scss
+++ b/source/stylesheets/_pages.scss
@@ -99,6 +99,7 @@ margin-bottom: 5px;
     @media (min-width:730px) and (max-width: 1050px) {
       width: 70%;
       padding: 0 0 0 40px;
+      min-height: 60vh;
     }
   }
   .details-content.media {
